--- a/deploy/kubernetes/test.yaml
+++ b/deploy/kubernetes/test.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
 kind: Deployment
 metadata:
   name: podinfo2
-  namespace: flux
+  namespace: default
 spec:
   replicas: 2
   template:
